--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -10,7 +10,8 @@ header {
 
   position: fixed;
   z-index: 2;
-  background-color:white;
+  background-color:#FF6D3D;
+  box-shadow: 0 8px 6px -6px rgba(0,0,0, .15);
 }
 
 nav {
